docs: 修正 V0.1.1 便携版启动验收记录